# EiffelStudio

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  .travis.yml_old  LICENSE.txt  README  README.md  appveyor.yml  gitsvn.sh
free_add_ons/micoe/: CHANGES  INSTALL  LICENSE  MANIFEST  MakeVars.in  Makefile  README  ROADMAP  TODO  VERSION  acconfig.h  configure  configure.in
free_add_ons/micoe/admin/: Makefile  README.build_ace  build_ace.in  config.guess  install-sh  mkbook  mkmanifest  mkrelease  mksrcdist  setup_minimal_support
free_add_ons/micoe/admin/makecsregistry/: Ace.ace.in  Makefile  makecsregistry.e  tokens.e  util.c
free_add_ons/micoe/adt/: Ace.ace.in  Makefile  README
free_add_ons/micoe/adt/basic/: file_system.e  format.e  math.e  system_time.e
free_add_ons/micoe/adt/c/: Makefile  file_sys.c  format.c  math.c  os9.c  os9.h  rtc12.c
free_add_ons/micoe/adt/contain/: array2.e  catalog.e  collection.e  dictionary.e  hash_table.e  indexed_catalog.e  indexed_list.e  integer_iterator.e  iterator.e  key_priority_queue.e  list.e  list_catalog.e  pair_iterator.e  priority_queue.e  queue.e  short_catalog.e  short_list.e  short_sorted_catalog.e  short_sorted_list.e  short_sorted_table.e  short_table.e  simple_table.e  small_sorted_set.e  sorted_catalog.e  sorted_collection.e  sorted_list.e  sorted_set.e  sorted_set_catalog.e  sorted_table.e  stack.e  table.e  traversable.e  twoway_integer_iterator.e  twoway_iterator.e  twoway_traversable.e
free_add_ons/micoe/adt/graph/: breadth_first_iterator.e  depth_first_iterator.e  edge.e  graph.e  graph_iterator.e  priortq.e  q_element.e  short_path_edge.e  short_path_graph.e  short_path_vertex.e  topological_iterator.e  vertex.e  vertex_colors.e  vertex_iterator.e
free_add_ons/micoe/adt/matcher/: bm_matcher.e  dfa_state.e  fast_re_matcher.e  keyword_matcher.e  keywords.e  kmp_matcher.e  matcher.e  re_matcher.e  re_node.e  rk_matcher.e  text_matcher.e
free_add_ons/micoe/adt/sorter/: heap_sorter.e  quick_sorter.e  sorter.e
free_add_ons/micoe/demo/: MakeVars.in  README
free_add_ons/micoe/demo/banking/: banking.idl
free_add_ons/micoe/demo/codesets/: Makefile  hello.idl
free_add_ons/micoe/demo/pmobv/: Makefile  banking.idl
free_add_ons/micoe/demo/user_exceptions/: Makefile  banking.idl
free_add_ons/micoe/idl/abstract_syntax/: add_expr.e  and_expr.e  any_type.e  array_declarator.e  attr_dcl.e  base_type_spec.e  boolean_literal.e  boolean_type.e  case.e  case_label.e  char_type.e  character_literal.e  const_dcl.e  const_exp.e  const_type.e  constr_type_spec.e  context_expr.e  declarator.e  definition.e  element_spec.e  enum_type.e  except_dcl.e  export.e  fixed_pt_type.e  floating_pt_type.e  idl_syntax_element.e  init_dcl.e  init_param_dcl.e  integer_literal.e  integer_type.e  interface.e  literal.e  member.e  module.e  mult_expr.e  native_type.e  octet_type.e  op_dcl.e  op_type_spec.e  or_expr.e  (+30 more)
free_add_ons/micoe/idl/concrete_parser/: add_expr_parser.e  and_expr_parser.e  attr_dcl_parser.e  base_type_spec_parser.e  case_label_parser.e  case_parser.e  const_dcl_parser.e  const_exp_parser.e  const_type_parser.e  constr_type_spec_parser.e  context_expr_parser.e  declarator_parser.e  definition_parser.e  element_spec_parser.e  enum_type_parser.e  except_dcl_parser.e  extended_syntax_parser.e  fixed_pt_type_parser.e  init_dcl_parser.e  init_param_dcl_parser.e  interface_parser.e  member_parser.e  module_parser.e  mult_expr_parser.e  op_dcl_parser.e  op_type_spec_parser.e  or_expr_parser.e  param_dcl_parser.e  param_type_spec_parser.e  primary_expr_parser.e  raises_expr_parser.e  scoped_name_parser.e  sequence_type_parser.e  shift_expr_parser.e  simple_type_spec_parser.e  specification_parser.e  state_member_parser.e  string_type_parser.e  struct_type_parser.e  switch_type_spec_parser.e  (+9 more)
free_add_ons/micoe/idl/idl2eif/: Makefile  build_ace_rc  idl2eif.e
free_add_ons/micoe/idl/lex_library/: accepting_state.e  alpha_state.e  alphanum_state.e  any_char_state.e  digit_dot_state.e  digit_minus_state.e  file_reader.e  multi_state.e  observer.e  quote_percent_state.e  reader.e  scanner.e  set_state.e  single_char_state.e  space_state.e  state.e  subject.e  tokens.e
free_add_ons/micoe/idl/parse_library/: abstract_syntax_element.e  boolean_composite_element.e  character_composite_element.e  composite_syntax_element.e  concrete_syntax_parser.e  error_handler.e  integer_composite_element.e  operator_composite_element.e  project.ace  real_composite_element.e  standard_compiler.e  string_composite_element.e  the_handler.e
free_add_ons/micoe/idl/pretty_printer/: prettytest.e
free_add_ons/micoe/idl/support/: idl_file_reader.e  idl_scanner.e  io_text.e  name_pair.e  project_tokens.e  string_pair.e  symbol_table.e  the_table.e
free_add_ons/micoe/idl/visitor/: eiffel_code_visitor.e  eiffel_implementation_visitor.e  eiffel_servant_visitor.e  eiffel_skeleton_visitor.e  eiffel_stub_visitor.e  integer_evaluation_visitor.e  ir_visitor.e  pretty_printer_visitor.e  real_evaluation_visitor.e  semantic_visitor.e  type_computing_visitor.e  typecode_visitor.e  typedef_unwinding_visitor.e  undefined_name_visitor.e
free_add_ons/micoe/orb/: Makefile  ROADMAP  build_ace_rc
free_add_ons/micoe/orb/adapter/: invocation_adapter.e  object_adapter.e
free_add_ons/micoe/orb/boa/: boa.e  boa_constants.e  boa_interface.e  object_record.e  request_queue.e  request_queue_record.e  shared_library.e  unix_shared_library.e
free_add_ons/micoe/orb/c/: Makefile  address.c  address.h  buffer.c  buffer.h  codeset.c  codeset.h  config.h.in  constants.c  eiffel.h  flags.c  flags.h  mico_types.h  os.c  os.h  transport.c  transport.h  uni_base64.c  uni_base64.h  uni_conversion.h  uni_errors.h  uni_strtypes.h  uni_support.h  uni_types.h  uni_unicode.c  uni_unicode.h
free_add_ons/micoe/orb/data_representation/: cdr_decoder.e  cdr_encoder.e  codeset.e  codeset_converter.e  codeset_converter_db.e  codeset_info.e  codeset_statics.e  codeset_types.e  data_decoder.e  data_encoder.e  encaps_state.e  simple_decoder.e  simple_encoder.e  the_osf_cs_registry.e  (+1 more)
(+70406 files in other folders)
